crates/trt-sys/src/pregenerated_bindings.rs

/* automatically generated by rust-bindgen 0.70.1 */

pub type btrt_log_fn =
    ::std::option::Option<unsafe extern "C" fn(severity: i32, msg: *const ::std::os::raw::c_char)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct btrt_logger_s {
    _unused: [u8; 0],
}
pub type btrt_logger_t = btrt_logger_s;
extern "C" {
    pub fn btrt_logger_create(min_severity: i32) -> *mut btrt_logger_t;
}
extern "C" {
    pub fn btrt_logger_set_callback(logger: *mut btrt_logger_t, callback: btrt_log_fn);
}
extern "C" {
    pub fn btrt_logger_get_ilogger(logger: *mut btrt_logger_t) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn btrt_logger_destroy(logger: *mut btrt_logger_t);
}
extern "C" {
    pub fn btrt_last_error() -> *const ::std::os::raw::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct btrt_runtime_s {
    _unused: [u8; 0],
}
pub type btrt_runtime_t = btrt_runtime_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct btrt_engine_s {
    _unused: [u8; 0],
}
pub type btrt_engine_t = btrt_engine_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct btrt_context_s {
    _unused: [u8; 0],
}
pub type btrt_context_t = btrt_context_s;
extern "C" {
    pub fn btrt_runtime_create(logger: *mut btrt_logger_t) -> *mut btrt_runtime_t;
}
extern "C" {
    pub fn btrt_runtime_destroy(rt: *mut btrt_runtime_t);
}
extern "C" {
    pub fn btrt_engine_deserialize(
        rt: *mut btrt_runtime_t,
        blob: *const ::std::os::raw::c_void,
        len: usize,
    ) -> *mut btrt_engine_t;
}
extern "C" {
    pub fn btrt_engine_destroy(engine: *mut btrt_engine_t);
}
extern "C" {
    pub fn btrt_engine_num_io_tensors(engine: *mut btrt_engine_t) -> i32;
}
extern "C" {
    pub fn btrt_engine_io_tensor_name(
        engine: *mut btrt_engine_t,
        idx: i32,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn btrt_engine_tensor_io_mode(
        engine: *mut btrt_engine_t,
        name: *const ::std::os::raw::c_char,
    ) -> i32;
}
extern "C" {
    pub fn btrt_engine_tensor_dtype(
        engine: *mut btrt_engine_t,
        name: *const ::std::os::raw::c_char,
    ) -> i32;
}
extern "C" {
    pub fn btrt_engine_tensor_shape(
        engine: *mut btrt_engine_t,
        name: *const ::std::os::raw::c_char,
        out_dims: *mut i64,
        out_ndims: *mut i32,
    ) -> i32;
}
extern "C" {
    pub fn btrt_context_create(engine: *mut btrt_engine_t) -> *mut btrt_context_t;
}
extern "C" {
    pub fn btrt_context_destroy(ctx: *mut btrt_context_t);
}
extern "C" {
    pub fn btrt_context_set_input_shape(
        ctx: *mut btrt_context_t,
        name: *const ::std::os::raw::c_char,
        dims: *const i64,
        ndims: i32,
    ) -> i32;
}
extern "C" {
    pub fn btrt_context_get_tensor_shape(
        ctx: *mut btrt_context_t,
        name: *const ::std::os::raw::c_char,
        out_dims: *mut i64,
        out_ndims: *mut i32,
    ) -> i32;
}
extern "C" {
    pub fn btrt_context_set_tensor_address(
        ctx: *mut btrt_context_t,
        name: *const ::std::os::raw::c_char,
        device_ptr: *mut ::std::os::raw::c_void,
    ) -> i32;
}
extern "C" {
    pub fn btrt_context_enqueue_v3(
        ctx: *mut btrt_context_t,
        stream: *mut ::std::os::raw::c_void,
    ) -> i32;
}
extern "C" {
    pub fn btrt_cuda_host_alloc(out_ptr: *mut *mut ::std::os::raw::c_void, bytes: usize) -> i32;
}
extern "C" {
    pub fn btrt_cuda_host_free(ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn btrt_cuda_memcpy_d2h(
        dst: *mut ::std::os::raw::c_void,
        src: *const ::std::os::raw::c_void,
        bytes: usize,
        stream: *mut ::std::os::raw::c_void,
    ) -> i32;
}
